style: fix responsive layout overflow in card and timeline components.

--- a/frontend/sass/components/_cards.sass
+++ b/frontend/sass/components/_cards.sass
@@ -132,7 +132,8 @@
 
     max-block-size: 29rem
     @include mix.list-inline-reset()
-    @include mix.logical-size($inline: 23rem)
+    inline-size: 100%
+    max-inline-size: 23rem
     @include mix.link-color(color.$logo-red, color.$dark-orange, color.$light-orange, color.$logo-red)
     
     .credits
