--- a/frontend/sass/components/_timeline.sass
+++ b/frontend/sass/components/_timeline.sass
@@ -309,6 +309,9 @@
                         gap: 0.5rem
                         grid-template-columns: 1fr
 
+                    .subject-content
+                        min-inline-size: auto
+
                     .subject-date
                         gap: 0.5rem
 
